--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -59,3 +59,102 @@ footer{
     color: var(--text-color);
     background-color: var(--secondary-color);
 }
+
+.header-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto
+    
+}
+
+.headerimg{
+    grid-column-start: 2;
+}
+
+.header-nav {
+    grid-column-start: 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+header {
+    border: solid var(--accent-color-1);
+    background-color: var(--secondary-color);
+    margin:1rem;
+
+}
+
+.history-img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+}
+
+.adventure-imgs {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    
+}
+
+.history-container {
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    place-items: center;
+}
+
+.history-container h2 {
+    grid-column: 1/4;
+    text-decoration: underline;
+}
+
+section p {
+    margin: 1rem;
+}
+
+.adventure-container {
+    display: grid; 
+    grid-template-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr
+    
+} 
+
+.img1 {
+    grid-column-start: 1;
+}
+
+.img2 {
+    grid-column-start: 3;
+}
+
+.img3 {
+    grid-column-start: 5;
+}
+
+.img4 {
+    grid-column-start: 7;
+}
+
+.img5{
+    grid-column-start: 9;
+
+}
+.adventure-container h2{
+    grid-column: 1/10;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: flex-end;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+
+}
+
