--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -382,6 +382,131 @@ section p {
     grid-column: 2;
 }
 
+.upcomingtrips {
+    border: solid var(--accent-color-1);
+    background-color: var(--secondary-color);
+    margin: 1rem;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    color: var(--text-color)
+}
+
+.nowtrips {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 7rem 1fr 1fr;
+    grid-gap: 2rem;
+    place-items: center;
+    text-align: center;
+    
+}
+
+.nowtrips h1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+    text-decoration: underline;
+    
+}
+
+.nowtrips img {
+    height: 10rem;
+    width: 15rem;
+}
+.coimg {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.cop {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+.azimg {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.azp {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+.nowtrips a {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+}
+
+.table {
+    display: grid;
+    grid-template-rows: 10% 10% 10% 10% 10%;
+    grid-template-columns: 30% 30% 30%;
+    place-items: center;
+    margin: 5rem;
+    
+}
+
+.table h1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-decoration: underline;
+}
+
+.h21 {
+    grid-column: 1;
+}
+
+.h22 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.h23 {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.date1 {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+.date2 {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+.date3 {
+    grid-row: 5;
+    grid-column: 1;
+}
+
+.place1 {
+    grid-column: 2;
+}
+
+.place2 {
+    grid-column: 2;
+}
+
+.place3 {
+    grid-column: 2;
+}
+
+.details1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.details2 {
+    grid-column: 3
+}
+
+.details3 {
+    grid-column:3;
+}
 
 html {
     background-color: var(--main-color);
